remove the matrix for different python version and macs os ; it make it simpler; fix the pytest-cov installation and command

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@
 
 [tox]
 envlist =
-    {py313, py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
+    {py313}-{edit, sdist, wheel}-{linux, windows}
     coverage
 isolated_build = true
 ignore_basepython_conflict = true
@@ -21,20 +21,12 @@ requires = virtualenv >= 20.0.34
 # with multiple different Python versions on multiple workers in parallel.
 [gh-actions]
 python =
-    3.6: {py36}{, -path, -sdist, -wheel, -edit}
-    3.7: {py37}{, -path, -sdist, -wheel, -edit}
-    3.8: {py38}{, -path, -sdist, -wheel, -edit}
-    3.9: {py39}{, -path, -sdist, -wheel, -edit}
-    3.10: {py310}{, -path, -sdist, -wheel, -edit}
-    3.11: {py311}{, -path, -sdist, -wheel, -edit}
-    3.12: {py312}{, -path, -sdist, -wheel, -edit}
     3.13: {py313}{, -path, -sdist, -wheel, -edit}
 
 # github action enviroment or operating system to use 
 [gh-actions:env]
 PLATFORM =
     ubuntu-latest: linux
-    macos-latest: macos
     windows-latest: windows
  
 # Test environments: are defined under the testenv section and individual testenv:<env_name> sections, 
@@ -43,7 +35,7 @@ PLATFORM =
 #  base configuration for run environments (fallback location for missing values for a test/run environment)
 # in case there is no match from envlist, the below run (fallback)
 # Note: this env. get executed from tox -e test ( the testenv)
-# Note: tox take its dependency if not override in deps from pyrpoject.toml section [tool.poetry.dependencies] 
+# Note: tox take its dependency if not override in deps from pyrpoject.toml section [tool.poetry.dependencies] 0r  directly dependencies = [...
 [testenv]
 description = An environment designed to facilitate testing (running the test suite)
 passenv =
@@ -74,10 +66,8 @@ extras =
     test
      # extras = test line tells tox to install the optional-dependencies section listed in pyproject.toml for running your test suite; this should include pytest.
 commands =
-# --cov-config pyproject.toml
     pytest -ra --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
-      --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
       {posargs} tests
 
 
@@ -91,15 +81,15 @@ commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERS
 
 # DEV
 # pypy3 is the any interpretor of python version 3.x.x
-# create a list of task from py312-edit-linux, py312-edit-maco, py312-edit-windows
+# create a list of task from py313-edit-linux, py313-edit-maco, py313-edit-windows
 # py311-edit-linux etc... 
-[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
+[testenv:{py313-, }edit{, -linux, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
 
 # SDIST
 # Note : pypy3 (factored name) is the any interpretor of python version python 3.0.0
-[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
+[testenv:{py313-,}sdist{, -linux, -windows}]
 description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
@@ -110,7 +100,7 @@ setenv =
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
 # see https://pip.pypa.io/en/stable/cli/pip_wheel/
-[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
+[testenv:{py313-,}wheel{, -linux, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python313} # if TOXPYTHON not found in env. take the default value python313
 #setenv = {[wheel_env]setenv} # Note: _WHEEL_DIR is missing the value for "{env:DIST_DIR}" ; call not working
@@ -120,7 +110,7 @@ changedir = {toxinidir}
 commands = pip wheel --wheel-dir {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}} {toxinidir}
 
 # Install WHEEL and TEST
-[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
+[testenv:{py313-,}wheel-test{, -linux, -macos, -windows}]
 description = Install Wheel, and Test
 basepython = {env:TOXPYTHON:python313}
 setenv =
@@ -133,7 +123,7 @@ commands_pre =
 
 
 # PATH
-[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
+[testenv:{py313-,}path{, -linux, -macos, -windows}]
 description = Add Source Code to Path & Test
 setenv =
     {[testenv]setenv}
