--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ repository = "https://github.com/Issamricin/dmc-view"
 documentation = "https://dmc-view.readthedocs.io/"
 
 keywords = [
-    "digital Magnatic view", "dmc",
+    "digital magnatic view", "dmc",
 ]
 
 requires-python = ">=3.8"
@@ -71,9 +71,9 @@ dependencies = [
 [project.optional-dependencies]
 test = [
   "pytest (>=8.4.0); python_version >='3.9' and python_version <='3.14'",
+  "pytest-cov (>=6); python_version >='3.9' and python_version <='3.13'",
   "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'",
-  "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'",
-  "pytest-cov (>6.2.0); python_version >='3.9' and python_version <='3.12'"
+  "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'"
 ]
 
 
