--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -83,7 +83,7 @@ jobs:
   ###############################
   set_github_outputs:
     name: Read Workflow Env Section Vars and set Github Outputs
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Pass 'env' section variables to GITHUB_OUTPUT
         id: pass-env-to-output
