remove pytest-qt since it make an issuue wit .so liberary

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,6 @@
 qt_api=pyside6
 minversion=8.0
 pythonpath=src
-required_plugins=pytest-qt
+#required_plugins=pytest-qt
 addopts=--strict-markers
 testpaths=tests  
