--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,8 +72,8 @@ dependencies = [
 test = [
   "pytest (>=8.4.0); python_version >='3.9' and python_version <='3.14'",
   "pytest-cov (>=6); python_version >='3.9' and python_version <='3.13'",
-  "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'",
   "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'"
+ # "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'" 
 ]
 
 
