--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
-name = "dmc-view"
+name = "dmcview"
 version = "0.3.2"
 description = "Digital Magnatic Compass View"
 authors = [{name="Iso"}, {name="Alan"}] # must be an object
