--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ setenv =
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
     PY_PACKAGE = dmcview
-    PKG_VERSION = 0.1.0 # Attention: This needs to be changed if yo uppgrade the version 
+    PKG_VERSION = 0.3.2 # Attention: This needs to be changed if you upgrade project toml version 
     DIST_DIR = dist
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
@@ -119,7 +119,7 @@ setenv =
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
-    pip install --exists-action w --force-reinstall "{env:_WHEEL_DIR}{/}{env:_WHEEL}[test]"s
+    pip install --exists-action w --force-reinstall "{env:_WHEEL_DIR}{/}{env:DIST_DIR}{/}{env:_WHEEL}[test]"
 
 
 # PATH
