fixing the double directory issue

--- a/tox.ini
+++ b/tox.ini
@@ -119,7 +119,7 @@ setenv =
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
-    pip install --exists-action w --force-reinstall "{env:_WHEEL_DIR}{/}{env:DIST_DIR}{/}{env:_WHEEL}[test]"
+    pip install --exists-action w --force-reinstall "{env:DIST_DIR}{/}{env:_WHEEL}[test]"
 
 
 # PATH
