fixing the dist as wheels-dir

--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ setenv =
     MYPYPATH = {toxinidir}{/}src{/}stubs
     PY_PACKAGE = dmcview
     PKG_VERSION = 0.3.2 # Attention: This needs to be changed if you upgrade project toml version 
-    DIST_DIR = dist
+    DIST_DIR = wheels-pip
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
     PYPY3323BUG = 1
