--- a/tox.ini
+++ b/tox.ini
@@ -257,7 +257,7 @@ changedir = {toxinidir}
 commands_pre =
     python -c 'import os; import shutil; d = "{env:DIST_DIR}"; exec("if os.path.exists(d):  shutil.rmtree(d)");'
 commands =
-    python -m build {toxinidir} --outdir {env:DIST_DIR} # version is taken from pyproject.toml under [tool.poetry]
+    python -m build {toxinidir} --outdir {env:DIST_DIR} 
 
 [testenv:check]
 description = Check the code for compliance with best practises of Python packaging ecosystem (PyPI, pip, Distribute, etc).
@@ -269,7 +269,7 @@ skip_install = true
 commands =
     pyroma --directory {toxinidir}
     pyroma --file {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
-    python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}*
+    #python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}*
     # TODO Improvement run 'pyroma --pypi' from some script/CI server after uploading to test-pypi
 depends = build # This is solely meant to specify dependencies and order in between a target run set.It will not run the build
 
