commenting out the pyroma check and raised an issue for that

--- a/tox.ini
+++ b/tox.ini
@@ -268,7 +268,7 @@ deps =
 skip_install = true
 commands =
     pyroma --directory {toxinidir}
-    pyroma --file {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
+    #pyroma --file {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
     #python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}*
     # TODO Improvement run 'pyroma --pypi' from some script/CI server after uploading to test-pypi
 depends = build # This is solely meant to specify dependencies and order in between a target run set.It will not run the build
