--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -37,6 +37,7 @@ env:
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
   #########################################################
   RUN_UNIT_TESTS: "true" # Note: we make it off for when we set it value to false 
+  RUN_CODE_COVERAGE: "true"
   RUN_LINT_CHECKS: "false" # ditto 
   DOCKER_JOB_ON: "false" # ditto 
   PUBLISH_ON_PYPI: "false" # ditto 
@@ -96,6 +97,7 @@ jobs:
             echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
           fi
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
+          echo "CODE_COVERAGE_ENABLED=$RUN_CODE_COVERAGE" >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
       ## Docker - Pipeline Settings ##
       - id: derive_docker_policy
@@ -253,7 +255,7 @@ jobs:
   codecov_coverage_host:
     runs-on: ubuntu-latest
     needs: test_suite
-    if: false 
+    if: ${{ needs.set_github_outputs.outputs.CODE_COVERAGE_ENABLED == 'true' }} 
     steps:
     - uses: actions/checkout@v4
     - name: Get Codecov binary
