enable it directly

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -254,8 +254,8 @@ jobs:
  ###############################
   codecov_coverage_host:
     runs-on: ubuntu-latest
-    needs: [set_github_outputs, test_suite]
-    if: ${{ needs.set_github_outputs.outputs.CODE_COVERAGE_ENABLED == 'true' }} 
+    needs: test_suite
+    if: true
     steps:
     - uses: actions/checkout@v4
     - name: Get Codecov binary
