--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -3,11 +3,6 @@ name: CI/CD Pipeline
 
 # Triggers on all Branches and v* Tags
 
-### Stress-Testing, with Multi-Factor Job Matrix, on: ###
-# - tags v*
-# - the 'stress-test' branch (GITHUB_REF_NAME == 'stress-test')
-
-
 ### Production PyPI Publish, pypi.org, on: ###
 # - v* tags on 'master' branch only
 
@@ -30,9 +25,7 @@ env:
   FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.8\", \"3.9\", \"3.10\", \"3.11\", \"3.12\", \"3.13\"]}"
   # Python 3.12 is in bugfix mode, same as 3.11 -> can start supporting 3.13 later 
   UBUNTU_PY313_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.13\"]}"
-  # Below is not used but in case you later want special test strategy to be run 
-  TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.13\"]}"
-
+ 
   #########################################################
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
   #########################################################
@@ -48,7 +41,7 @@ env:
   # Override Docker Policy-dependent decision-making and
   # Accept any ALL (branch/build) to Publish to Dockerhub
   # if true, it will push image and ignore DOCKER_JOB_POLICY
-  ALWAYS_BUILD_N_PUBLSIH_DOCKER: "false"
+  ALWAYS_BUILD_N_PUBLSIH_DOCKER: "true"
 
   DOCKER_JOB_POLICY: "CDeployment"
   # - CDeployment : Builds and Publishes only if Tests ran and passed
@@ -90,12 +83,9 @@ jobs:
         run: |
           # set the matrix strategy to Full Matrix Stress Test if on master/main or stress-test branch or any tag
           BRANCH_NAME=${GITHUB_REF_NAME}
-          if [[ $BRANCH_NAME == "stress-test" || $GITHUB_REF == refs/tags/* ]]; then
-            echo "matrix=$FULL_MATRIX_STRATEGY" >> $GITHUB_OUTPUT
-          else
-            echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
-          fi
+          echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
+          echo "DOCKER_JOB_ON"=$DOCKER_JOB_ON >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
       ## Docker - Pipeline Settings ##
       - id: derive_docker_policy
@@ -245,6 +235,7 @@ jobs:
           if-no-files-found: error
     outputs:
       PEP_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
+      TEST_RESULT: ${{'success'}}
 
 
  ###############################
@@ -280,13 +271,12 @@ jobs:
   docker_build:
     needs: [set_github_outputs, test_suite]
     uses: ./.github/workflows/docker.yml
-    if: true 
+    if: ${{ needs.set_github_outputs.outputs.DOCKER_JOB_ON == 'true' }} 
     with:
       acceptance_policy: ${{ needs.set_github_outputs.outputs.PIPE_DOCKER_POLICY }}
       image_slug: "dmcview"
       # target_stage: "some_stage_alias"  # no stage, means no `--target` flag, on build
-      tests_pass: ${{ needs.test_suite.result == 'success' }}
-      tests_run: ${{ !contains(fromJSON('["skipped", "cancelled"]'), needs.test_suite.result) }}
+      tests_pass: ${{ needs.test_suite.outputs.TEST_RESULT == 'success' }}
       DOCKER_USER: ${{ vars.DOCKER_USER }}
     secrets:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
