--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -176,7 +176,9 @@ jobs:
           echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
 
           # extract '1.12.5.dev0' from 'dmcview-1.12.5.dev0-py3-none-any.whl'
-          'echo Alan:$WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/'
+          echo "Alan=$WHEEL_NAME"
+          echo $Alan
+          echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/'
           PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/')
 
           echo "PEP_VERSION=${PEP_VERSION}" >> $GITHUB_OUTPUT
