--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -175,17 +175,16 @@ jobs:
           WHEEL_SIZE=$(echo $WHEEL_INFO | cut -d ' ' -f 2)
           echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
 
-          # extract '1.12.5.dev0' from 'dmcview-1.12.5.dev0-py3-none-any.whl'
-          echo "Alan=$WHEEL_NAME"
-          echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/'
+          # extract '0.3.2' from 'dmcview-0.3.2-py3-none-any.whl'
+          #echo "Alan=$WHEEL_NAME"
+          #echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/'
           PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/')
           PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/')
-          echo "AlanAgain=$PEP_VERSION"
-
-          echo "PEP_VERSION=${PEP_VERSION}" >> $GITHUB_OUTPUT
+          echo "PEP_VERSION2=$PEP_VERSION"
+          echo "PEP_VERSION=${PEP_VERSION2}" >> $GITHUB_OUTPUT
 
       - run: 'echo "WHEEL_NAME: $WHEEL_NAME SIZE: $WHEEL_SIZE"'
-      - run: 'echo "PEP_VERSION: $PEP_VERSION"'
+      - run: 'echo "PEP_VERSION: $PEP_VERSION2"'
 
       # Crash Workflow if PEP_VERSION is not set
       - if: ${{ steps.extract_wheel_info.outputs.PEP_VERSION == '' }}
