--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -177,16 +177,18 @@ jobs:
 
           # extract '0.3.2' from 'dmcview-0.3.2-py3-none-any.whl'
           #echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/'
-          WHEEL_VERSION=$(echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/')
-          echo "WHEEL_VERSION=$WHEEL_VERSION"
-          echo "WHEEL_VERSION=$WHEEL_VERSION" >> $GITHUB_OUTPUT
-           echo "WHEEL_VERSION=$WHEEL_VERSION" >> $GITHUB_ENV
+          PEP_VERSION=$(echo $WHEEL_NAME | sed -E 's/dmcview-([^ ]+)-py3-none-any.whl/\1/')
+          echo "PEP_VERSION=$PEP_VERSION"
+          echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_OUTPUT
+          echo "PEP_VERSION=$PEP_VERSION" >> $GITHUB_ENV
+          echo "Alan below ..."
+          echo ${{ steps.extract_wheel_info.outputs.PEP_VERSION}}
 
       - run: 'echo "WHEEL_NAME: $WHEEL_NAME SIZE: $WHEEL_SIZE"'
-      - run: 'echo "WHEEL_VERSION: $WHEEL_VERSION"'
+      - run: 'echo "PEP_VERSION: $PEP_VERSION"'
 
       # Crash Workflow if PEP_VERSION is not set
-      - if: ${{ steps.extract_wheel_info.outputs.WHEEL_VERSION == '' }}
+      - if: ${{ steps.extract_wheel_info.outputs.PEP_VERSION == '' }}
         run: exit 1
 
       ###### TEST SUITE RUN against Wheel ######
