--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -161,7 +161,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          #password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
