--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -151,24 +151,36 @@ jobs:
           echo === SECRETS ===
           echo ${DOCKER_PASSWORD}
 
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
+        
 
       - run: echo ${{ github.ref }}
       - run: echo ${{ github.ref_name }}
       - run: echo "IMAGE_TAG=${{ inputs.image_tag || github.ref_name }}" >> $GITHUB_ENV
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          #password: ${{ secrets.DOCKERHUB_TOKEN }}
-          password: ${{secrets.DOCKER_PASSWORD}}
+      #- name: Login to Docker Hub
+      #  uses: docker/login-action@v3
+      #  with:
+      #    username: ${{ vars.DOCKER_USERNAME }}
+      #    #password: ${{ secrets.DOCKERHUB_TOKEN }}
+      #    password: ${{secrets.DOCKER_PASSWORD}}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      #- name: Set up Docker Buildx
+      #  uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
+      #- name: Build and push
+      #  uses: docker/build-push-action@v6
+      #  with:
+      #    push: true
+      #    tags: ${{'alanmehio'}}/${{ github.event.repository.name }}:latest
+      
+      - name: Build & push Docker image 
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          push: true
-          tags: ${{'alanmehio'}}/${{ github.event.repository.name }}:latest
+          image: alanmehio/dmc-view/dmcview
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
