--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -182,5 +182,5 @@ jobs:
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ 'alalnmehio' }}
           password: ${{ secrets.DOCKER_PASSWORD }}
