--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -178,7 +178,7 @@ jobs:
       - name: Build & push Docker image 
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: dmcview
+          image: alalnmehio/dmc-view
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
