--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -86,7 +86,7 @@ jobs:
           echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
           echo "RUN_CODE_COVERAGE=$RUN_CODE_COVERAGE" >> $GITHUB_OUTPUT
-          echo "RUN_LINT_CHECKS"=$RUN_LINT_CHECKS" >> $GITHUB_OUTPUT
+          echo "RUN_LINT_CHECKS=$RUN_LINT_CHECKS" >> $GITHUB_OUTPUT
           echo "DOCS_ON=$DOCS_ON" >> $GITHUB_OUTPUT
           echo "DOCKER_JOB_ON"=$DOCKER_JOB_ON >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
