--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -28,10 +28,8 @@ env:
   #########################################################
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
   #########################################################
-  RUN_UNIT_TESTS: "true" # Note: we make it off for when we set it value to false 
-  RUN_CODE_COVERAGE: "true" # ditto 
+  RUN_UNIT_TESTS: "true" # Note: we make it off for when we set it value to false  
   RUN_LINT_CHECKS: "true" # ditto 
-  DOCS_ON: "true" # ditto
   DOCKER_JOB_ON: "true" # ditto 
   PUBLISH_ON_PYPI: "false" # ditto 
   DRAW_DEPENDENCIES: "false" # ditto 
@@ -85,9 +83,7 @@ jobs:
           BRANCH_NAME=${GITHUB_REF_NAME}
           echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
-          echo "RUN_CODE_COVERAGE=$RUN_CODE_COVERAGE" >> $GITHUB_OUTPUT
           echo "RUN_LINT_CHECKS=$RUN_LINT_CHECKS" >> $GITHUB_OUTPUT
-          echo "DOCS_ON=$DOCS_ON" >> $GITHUB_OUTPUT
           echo "DOCKER_JOB_ON"=$DOCKER_JOB_ON >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
       ## Docker - Pipeline Settings ##
@@ -248,8 +244,7 @@ jobs:
  ###############################
   codecov_coverage_host:
     runs-on: ubuntu-latest
-    needs: [set_github_outputs, test_suite]
-    if: ${{ needs.set_github_outputs.outputs.RUN_CODE_COVERAGE == 'true' }}
+    needs: test_suite
     steps:
     - uses: actions/checkout@v4
     - name: Get Codecov binary
@@ -291,7 +286,6 @@ jobs:
     name: Build Documentation
     needs: set_github_outputs
     uses: ./.github/workflows/policy_docs.yml
-    if: ${{ needs.set_github_outputs.outputs.DOCS_ON == 'true' }}
     with:
       run_policy: '${{ needs.set_github_outputs.outputs.PIPE_DOCS_POLICY }}'
       python_version: ${{ needs.set_github_outputs.outputs.PIPE_DOCS_PY }}
