--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,15 @@ test = [
   "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'"
  # "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'" 
 ]
+docs =[
+   "Sphinx (<=8.2.3);  python_version >='3.11' and python_version <='3.14'",
+   "sphinx-autodoc-typehints (<=3.2.0); python_version >='3.11' and python_version <='3.14'",
+   "sphinx-rtd-theme (<=3.0.2);  python_version >='3.8' and python_version <='3.14'",
+   "sphinxcontrib-spelling (<=8.0.1);  python_version >='3.10' and python_version <='3.14'",
+   "sphinx-autobuild (==2024.10.3);  python_version >='3.9' and python_version <='3.14'",
+   "sphinx-inline-tabs (==2023.4.21); python_version >='3.8' and python_version <='3.14'",
+   "sphinxcontrib-mermaid (<=1.0.0);  python_version >='3.8' and python_version <='3.14'"
+]
 
 
 # Information required for building (sdist/wheel)
@@ -112,19 +121,6 @@ exclude = [
     ".scrutinizer.yml",
     ".travis.yml"
 ]
-
-# Docs: dev and build dependencies
-[tool.poetry.dependencies]
-sphinx = { version = ">=8.1.3", optional = true }
-sphinx-autodoc-typehints = { version = ">= 2.5.0", optional = true }
-sphinx-rtd-theme = { version = ">= 3.0.1", optional = true }
-sphinxcontrib-spelling = { version = ">= 8.0.0", optional = true }
-sphinx-autobuild = { version = "^2024.10.3", optional = true }
-sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
-sphinxcontrib-mermaid = { version = "^1.0.0", optional = true, python = ">=3.7,<3.13" }
-
-[tool.poetry.extras] #see https://realpython.com/dependency-management-python-poetry/
-docs = ["Sphinx", "sphinx-autodoc-typehint", "sphinx-rtd-theme", "sphinxcontrib-spelling", "sphinx-autobuild", "sphinx-inline-tabs", "sphinxcontrib-mermaid"]
 
 
 
