--- a/tox.ini
+++ b/tox.ini
@@ -220,7 +220,7 @@ description = Build the documentation. Read the source .rst and .py files and
     are checked.
 basepython = {env:TOXPYTHON:python313}
 setenv = {[docsenv]setenv}
-deps = -r  {env:REQS_FILE:{env:DEFAULT_REQS_FILE:reqs-docs.txt}}
+deps = {-rAlan env:REQS_FILE:{env:DEFAULT_REQS_FILE:reqs-docs.txt}}
 usedevelop = true
 extras = docs
 changedir = {toxinidir}
