docs should works

--- a/tox.ini
+++ b/tox.ini
@@ -227,11 +227,8 @@ usedevelop = true
 extras = docs
 changedir = {toxinidir}
 commands =
-    sphinx-build {posargs:-E} -b doctest docs {env:DOCS_BUILD_LOCATION:dist{/}docs}
-    sphinx-build {posargs:-E} -b html docs {env:DOCS_BUILD_LOCATION:dist{/}docs}
-    sphinx-build -b spelling docs {env:DOCS_BUILD_LOCATION:dist{/}docs}
-    sphinx-build -b linkcheck docs {env:DOCS_BUILD_LOCATION:dist{/}docs}
-    python -c 'print("View documentation at {env:DOCS_BUILD_LOCATION:dist/docs}/index.html; it is ready to be hosted!")'
+    sphinx-build {posargs} -M html  docs/source {toxworkdir}{/}dist{/}docs{/}build
+    python -c 'print("View documentation inside toxworkdir  at {env:DOCS_BUILD_LOCATION:dist/docs/build/html}/index.html; it is ready to be hosted!")'
 
 ## SERVE LIVE DOCUMENTATION ##
 # export REQS_FILE=reqs-docslive.txt && tox -e pin-deps -- -E docslive && tox -r -e docs-live
