fixing ruff check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -182,5 +182,6 @@ ignore = [
 
 
 # see scripts/parse_version.py 
+# we need to update in toml file above  and below also
 [tool.software-release]
 version_variable = "src/dmcview/__init__.py:__version__"
