--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -33,7 +33,7 @@ env:
   DOCS_ON: "true"
   DOCKER_JOB_ON: "true" # ditto 
   PUBLISH_ON_PYPI: "false" # ditto 
-  DRAW_DEPENDENCIES: "false" # ditto 
+  DRAW_DEPENDENCIES: "true" # ditto 
   ###############################
 
   ### DOCKER Job Policy ####
@@ -61,7 +61,7 @@ env:
   DOCS_BUILDER_RUNTIME: "3.13"
 
   #### CODE VISUALIZATION Job ####
-  ALWAYS_CODE_VIZ: "false"
+  ALWAYS_CODE_VIZ: "true"
   CODE_VIZ_POLICY: '2'  # {2, 3}
   ##########################
 
@@ -89,6 +89,8 @@ jobs:
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
       ## Docker - Pipeline Settings ##
       # see https://docs.github.com/en/actions/reference/evaluate-expressions-in-workflows-and-actions
+      # evauation: (false && 0) || (true && 1) ends with 0 (first one )
+      # while    (true && 0) || (true && 1) ends with 1 (second one)
       - name: Derive Docker Policy
         id: derive_docker_policy
         run: echo "POL=${{ (env.DOCKER_JOB_ON != 'true' && '0') || (env.ALWAYS_BUILD_N_PUBLSIH_DOCKER == 'true' && '1') || (env.DOCKER_JOB_POLICY == 'CDeployment' && '2') || (env.DOCKER_JOB_POLICY == 'CDelivery' && '3') }}" >> $GITHUB_OUTPUT
