fix python version

--- a/.github/workflows/python_imports.yml
+++ b/.github/workflows/python_imports.yml
@@ -103,8 +103,8 @@ jobs:
         python -m pip install tox==3.28
     - name: Install dependencies (ie dot binary of graphviz)
       run: |
-        sudo apt-get update -y --allow-releaseinfo-change
-        sudo apt-get install -y graphviz
+        sudo apt update -y --allow-releaseinfo-change
+        sudo apt install -y graphviz
     - name: Draw Dependency Graphs as .svg files
       run: tox -e pydeps -vv -s false
     - name: Upload Dependency Graphs as artifacts
