--- a/tox.ini
+++ b/tox.ini
@@ -449,6 +449,7 @@ commands_post =
 
 
 ## GENERATE ARCHITECTURE GRAPHS
+# see pydeps https://github.com/thebjorn/pydeps 
 [testenv:pydeps]
 description = Visualise the dependency graphs (roughly which module imports which), by examining the
     Python code. The dependency graph(s) are rendered in .svg file(s) and saved on the disk. By default, the generated
@@ -486,6 +487,7 @@ commands =
 
     # Draw only the source code package inner dependencies
     pydeps src{/}{env:PY_PACKAGE} --only {env:PY_PACKAGE} --noshow -o {env:PYDEPS_DIR:pydoer-graphs}{/}deps_inner.svg
+
     # Draw the source code package inner and external dependencies
     pydeps src{/}{env:PY_PACKAGE} --cluster --noshow -o {env:PYDEPS_DIR:pydoer-graphs}{/}deps_all.svg
 
