--- a/.github/workflows/python_imports.yml
+++ b/.github/workflows/python_imports.yml
@@ -30,7 +30,7 @@ on:
       python_version:
         required: false
         type: string
-        default: '3.10'
+        default: '3.13'
       artifacts_dir:
         required: false
         type: string
@@ -106,6 +106,9 @@ jobs:
         sudo apt update -y --allow-releaseinfo-change
         sudo apt install -y graphviz
     - name: Draw Dependency Graphs as .svg files
+      # FIXME:
+      # see https://docs.github.com/en/actions/tutorials/store-and-share-data
+      # see https://github.com/actions/upload-artifact?tab=readme-ov-file#examples
       run: tox -e pydeps -vv -s false
     - name: Upload Dependency Graphs as artifacts
       uses: actions/upload-artifact@v4.6.2
